--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>자바스크립트 연습 사이트 시작 페이지입니다.</h1>
 <h3><a href = "test/view/event_test.html">자바스크립트 이벤트와 이벤트핸들러</a></h3>
+<h3><a href ="test/view/checkvalue.html">정규표현식 테스트</a></h3>
 </body>
 </html>
